--- a/assets/css/heidi.css
+++ b/assets/css/heidi.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Rokkitt:400,700);
+
 .header-bg-wrapper .logo-container .logo{background: #246fa0;}
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
@@ -14,19 +16,32 @@ border-color: #246fa0;}
 .header-links-item .overlay{
 background: #141433;
 opacity: 0;
-position: absolute;
 width: 100%;
 height: 100%;
 z-index: 1;
 -webkit-transition: opacity 0.2s ease 0.1s;
 -o-transition: opacity 0.2s ease 0.1s;
 transition: opacity 0.2s ease 0.1s
+border: 3pt solid #fff;
 }
 
 .header-links-item a:hover .overlay{
 	opacity: 0.5;
 }
 
-.navbar-vertical ul li a{font-family:"Rokkitt";}
 
-@import url(https://fonts.googleapis.com/css?family=Rokkitt:400,700);
+.header-links-item, .overlay{border-right: 3pt solid #fff;}
+
+
+.navbar-vertical ul li a{
+	font-family:"Rokkitt";
+	font-size: 20px;
+}
+
+.navbar-collapse ul li a{	font-family:"Rokkitt";
+	font-size: 20px;}
+
+	.navbar-brand img{margin-right: 40px;}
+
+	#section-news .heading {text-align: center;}
+.paid-for{ max-width: 435px;}
