--- a/assets/css/heidi.css
+++ b/assets/css/heidi.css
@@ -364,6 +364,11 @@ h1.page-title {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
 }
 
-.donation-widget.tabs {
-  max-width: 515px !important;
+
+.donor .donation-widget.tabs {
+  max-width: 700px !important;
+}
+
+.box-wrapper {
+  max-width: 770px;
 }
