--- a/assets/css/heidi.css
+++ b/assets/css/heidi.css
@@ -372,3 +372,9 @@ h1.page-title {
 .box-wrapper {
   max-width: 770px;
 }
+
+@media (min-width: 992px) {
+  .header-links-item article h3 {
+    font-size: 18px;
+  }
+}
